service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: service
