service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: service
